Correction pour le pattern app factory + env pour SQLAlchemy

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-HOST = "postgresql-test-anomeet.alwaysdata.net"
-USER = "test-anomeet_application"
-PASSWORD = "Application_Anomeet"
-DATABASE = "test-anomeet_postgresql"
-PORT = "5432"
+DATABASE_BASE_URL = "postgresql-test-anomeet.alwaysdata.net"
+DATABASE_USERNAME = "test-anomeet_application"
+DATABASE_PASSWORD = "Application_Anomeet"
+DATABASE_NAME = "test-anomeet_postgresql"
+DATABASE_PORT = "5432"
